# ndi_ots_ros2

./: README.md  ndi_ros2_driver.jazzy.repos
.github/workflows/: ci_jazzy.yml
ndi_bringup/: CMakeLists.txt  README.md  package.xml
ndi_bringup/config/: polaris_vega_controllers.yaml
ndi_bringup/launch/: polaris_vega.launch.py
ndi_bringup/rviz/: polaris_vega.rviz
ndi_bringup/urdf/: polaris_vega_setup.urdf.xacro
ndi_description/: CMakeLists.txt  package.xml
ndi_description/urdf/: ndi_tracker.ros2_control.xacro
ndi_hardware/: CMakeLists.txt  ndi_hardware_interface_plugin.xml  package.xml
ndi_hardware/include/ndi_hardware/: ndi_hardware_interface.hpp
ndi_hardware/src/: ndi_hardware_interface.cpp
