<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ndi_bringup</name>
  <version>0.0.0</version>
  <description>Launch and run-time configurations for NDI optical tracking systems</description>
  <maintainer email="ZixingJiang@outlook.com">zixingjiang</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>

  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>pose_broadcaster</exec_depend>
  <exec_depend>ndi_description</exec_depend>
  <exec_depend>ndi_hardware</exec_depend>
  <exec_depend>urdf</exec_depend>
  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
